# mdconfig-rs

./: .cirrus.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  coverage.sh
.github/workflows/: ci.yml
bindgen/: bindgen.sh  wrapper.h
src/: ffi.rs  ffi32.rs  ffi64.rs  lib.rs
tests/: ffi.rs  functional.rs
tests/functional/: ffi32.rs  mod.rs
